fix: dark mode link color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -74,6 +74,10 @@
   color: #0677f9;
 }
 
+[data-theme="dark"] article a {
+  color: #0677f9;
+}
+
 [data-theme="light"] {
   /* Light mode styles */
   --ifm-background-color: #fbfbff !important;
